Convert Reflector and Extractor to interfaces